@@ -324,6 +324,7 @@ class Image:public FitsFile
 		virtual int deleteFromDB () { return 0; }
 		virtual int deleteImage ();
 
+		void setObjectName (rts2core::Connection *camera_conn);
 
 		void setMountName (const char *in_mountName);
 
@@ -683,6 +684,9 @@ class Image:public FitsFile
 
 		// if write RTS2 extended values
 		bool writeRTS2Values;
+	
+		// if OBJECT keyword was written
+		bool objectNameWritten;
 
 		int targetId;
 		int targetIdSel;
