@@ -111,6 +111,8 @@ void Image::initData ()
 
 	writeConnection = true;
 	writeRTS2Values = true;
+
+	objectNameWritten = false;
 }
 
 
@@ -484,6 +486,7 @@ void Image::writeTargetHeaders (Rts2Target *target, bool set_values)
 		targetName = new char[strlen (target->getTargetName ()) + 1];
 		strcpy (targetName, target->getTargetName ());
 		setValue ("OBJECT", target->getTargetName (), "target name");
+		objectNameWritten = true;
 	}
 	else
 	{
@@ -1416,6 +1419,15 @@ int Image::deleteImage ()
 	flags &= ~IMAGE_SAVE;
 	ret = unlink (getFileName ());
 	return ret;
+}
+
+void Image::setObjectName (rts2core::Connection *camera_conn)
+{
+	if (objectNameWritten)
+		return;
+	rts2core::Value *objectName = camera_conn->getValue ("OBJECT");
+	if (objectName && strlen (objectName->getValue ()) > 0)
+		setValue ("OBJECT", objectName->getValue (), "object name");
 }
 
 void Image::setMountName (const char *in_mountName)
