@@ -1,3 +1,6 @@
+2012-05-22
+ * OBJECT camera value
+
 2012-05-21
  * WCS auxiliary values
 
